--- a/BackEnd-main/vercel.json
+++ b/BackEnd-main/vercel.json
@@ -6,7 +6,10 @@
     "routes": [
         {
             "src":"/(.*)",
-            "dest":"/"
+            "dest":"/",
+            "headers":{
+                "Acsess-Control-Allow-Origin":"*"
+            }
         }
     ]
 }
