--- a/BackEnd-main/vercel.json
+++ b/BackEnd-main/vercel.json
@@ -6,7 +6,7 @@
     "routes": [
         {
             "src":"/(.*)",
-            "dest":"/",
+            "dest":"src/index.js",
             "headers":{
                 "Acsess-Control-Allow-Origin":"*"
             }
